--- a/16_Shop_MultiProduct/Views/Home/Policy.cshtml
+++ b/16_Shop_MultiProduct/Views/Home/Policy.cshtml
@@ -18,20 +18,22 @@
 }
 <div class="box-breadcrumb">
     <div class="container">
-        <ul class="hidden-sm hidden-xs">
-            <li><a href="/" target="_self" title="Trang chủ">Trang chủ</a></li>
+        <ul class="woocommerce-breadcrumb breadcrumb">
+            <li><a href="/">Trang chủ</a></li>
             <li><a href="/blog">Các chính sách</a></li>
             <li><span>@ViewBag.Title</span></li>
         </ul>
+      
     </div>
 </div>
 <div class="page-heading">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="page-title center">
-                    <h2>@ViewBag.Title</h2>
-                </div>
+                <h1 class="page-title">
+                    @ViewBag.Title
+                </h1>
+               
             </div>
         </div>
     </div>
