--- a/16_Shop_MultiProduct/Views/Article/Category.cshtml
+++ b/16_Shop_MultiProduct/Views/Article/Category.cshtml
@@ -21,52 +21,130 @@
 }
 <div class="box-breadcrumb">
     <div class="container">
-        <ul class="hidden-sm hidden-xs">
-            <li><a href="/" target="_self" title="Trang chủ @commonInfo.Name">TRANG CHỦ</a></li>
+        <ul class="woocommerce-breadcrumb breadcrumb">
+            <li><a href="/">Trang chủ</a></li>
             <li><a href="/blog">blogs</a></li>
-            <li>
-                <span>
-                    @ViewBag.Keywords
-                </span>
-            </li>
+            <li><span> @ViewBag.Keywords</span></li>
         </ul>
+ 
     </div>
 </div>
-<div class="box-news">
-    <div class="container">
-        <div class="box-title-new">
-            <div class="title-top">
-                <h2 class="title">@ViewBag.Title</h2>
-            </div>
-            
-        </div>        
-        <div class="box-top-products box-slide">
-            <div class="owl-carousel owl-carousel-3">
-                @foreach (var item in articleList.ItemList)
-                {
-                    <div class="item item-new">
-                        <div class="item-slide">
-                            <div class="image-hover">
-                                <a href="#" class="">
-                                    <img class="" src="@item.Thumb" alt="@item.Title">
+<div class="main-container left-sidebar">
+    <div class="container">       
+        <div class="row blog-grid content-post auto-clear">
+            <div class="main-content col-lg-9 col-md-8">
+                <!-- Main content -->
+                <div class="row blog-grid content-post auto-clear">
+                    @foreach (var item in articleList.ItemList)
+                    {
+                        <article class="post-item grid col-bg-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 col-ts-12  post type-post status-publish format-standard has-post-thumbnail hentry category-digital tag-google tag-phone">
+                            <div class="post-thumb">
+                                <a class="effect effect16" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">
+                                    <figure class=""><img width="870" height="564" src="@item.Thumb" class="wp-post-image attachment-870x564 size-870x564 lazy" alt="@item.Title" style="display: inline;"></figure>
                                 </a>
                             </div>
-                            <ul class="info-new">
-                                <li class="time"><i class="fa fa-calendar" aria-hidden="true"></i> <time>@Anpero.StringHelpper.ConvertDateTime(item.CreateDate).ToString("dd/mm/yyyy")</time></li>
+                            <h2 class="post-title"><a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">@item.Title</a></h2>
 
-                                <li class="post"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>@item.CategoryName</span></li>
-                            </ul>
-                        </div>
-                        <div class="detail clearfix">
-                            <h3 class="title"><a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)" title="@item.Title">@item.Title</a></h3>
-                            <p class="des">@item.ShotDesc</p>
-                            <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)" class="view" title="">Xem thêm <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                            <div class="post-content">
+                                @item.ShotDesc
+                            </div>
+                            <div class="group-read-more">
+                                <a class="read-more" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">
+                                    Xem thêm
+                                </a>
+
+                            </div>
+                        </article>
+                    }
+                </div>
+                @Html.Raw(ViewBag.page)
+            </div>
+            <div class="sidebar col-lg-3 col-md-4">
+                <div id="widget-area" class="widget-area blog-sidebar">
+                    <div class="sidebar-head">
+                        <span class="text">Sidebar</span>
+                        <a href="#" class="close-block-sidebar"><i class="fa fa-times" aria-hidden="true"></i></a>
+                    </div>
+            <div id="categories-3" class="widget widget_categories">
+                        <h2 class="widgettitle">Browse Categories<span class="arrow"></span></h2>		<ul>
+                            <li class="cat-item cat-item-82">
+                                <a href="category/appliances/index.html">Appliances</a>
+                            </li>
+                            <li class="cat-item cat-item-83">
+                                <a href="category/digital/index.html">Digital</a>
+                            </li>
+                            <li class="cat-item cat-item-84">
+                                <a href="category/furniture/index.html">Furniture</a>
+                            </li>
+                            <li class="cat-item cat-item-85">
+                                <a href="category/handmade/index.html">Handmade</a>
+                            </li>
+                            <li class="cat-item cat-item-86">
+                                <a href="category/narure/index.html">Narure</a>
+                            </li>
+                            <li class="cat-item cat-item-87">
+                                <a href="category/organic/index.html">Organic</a>
+                            </li>
+                        </ul>
+                    </div><div id="widget_ovic_post-4" class="widget widget-recent-post">
+                        <h2 class="widgettitle">Recent Post<span class="arrow"></span></h2>                <div class="ovic-blog">
+                            <article class="blog-item post-3450 post type-post status-publish format-standard has-post-thumbnail hentry category-digital tag-google tag-phone">
+                                <div class="post-thumb">
+                                    <a href="google-3xl-pixel-phone-is-much-nicer-than-the-iphone-x/index.html" class="">
+                                        <img width="100" height="73" src="https://gokko.kutethemes.net/wp-content/uploads/2018/12/bloga-full-imgs-100x73.jpg" class="wp-post-image attachment-100x73 size-100x73 lazy" alt="bloga-full-imgs" style="display: inline;">
+                                    </a>
+                                </div>
+                                <div class="post-info">
+                                    <h4 class="post-title">
+                                        <a href="google-3xl-pixel-phone-is-much-nicer-than-the-iphone-x/index.html">Google 3xl pixel phone is much nicer than the iphone X</a>
+                                    </h4>
+                                    <div class="post-meta">
+                                        <span class="author"><span>By</span> admin</span> -
+                                        <span class="date">10 Dec 2018</span>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="blog-item post-3443 post type-post status-publish format-standard has-post-thumbnail hentry category-digital tag-apple">
+                                <div class="post-thumb">
+                                    <a href="top-best-laptops-voted-in-2018/index.html" class="">
+                                        <img width="100" height="73" src="https://gokko.kutethemes.net/wp-content/uploads/2018/12/blog-fuedll-imgs-100x73.jpg" class="wp-post-image attachment-100x73 size-100x73 lazy" alt="blog-fuedll-imgs" style="display: inline;">
+                                    </a>
+                                </div>
+                                <div class="post-info">
+                                    <h4 class="post-title">
+                                        <a href="top-best-laptops-voted-in-2018/index.html">Top best laptops voted in 2018</a>
+                                    </h4>
+                                    <div class="post-meta">
+                                        <span class="author"><span>By</span> admin</span> -
+                                        <span class="date">10 Dec 2018</span>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="blog-item post-3441 post type-post status-publish format-standard has-post-thumbnail hentry category-digital tag-samsung">
+                                <div class="post-thumb">
+                                    <a href="top-the-best-smart-watches-2018/index.html" class="">
+                                        <img width="100" height="73" src="https://gokko.kutethemes.net/wp-content/uploads/2018/12/blog-full-imgs-100x73.jpg" class="wp-post-image attachment-100x73 size-100x73 lazy" alt="blog-full-imgs" style="display: inline;">
+                                    </a>
+                                </div>
+                                <div class="post-info">
+                                    <h4 class="post-title">
+                                        <a href="top-the-best-smart-watches-2018/index.html">Top the best smart watches 2018</a>
+                                    </h4>
+                                    <div class="post-meta">
+                                        <span class="author"><span>By</span> admin</span> -
+                                        <span class="date">10 Dec 2018</span>
+                                    </div>
+                                </div>
+                            </article>
                         </div>
                     </div>
-                }
+                
+                </div><!-- .widget-area -->
 
             </div>
         </div>
+    
+       
     </div>
 </div>
 
