--- a/16_Shop_MultiProduct/Views/Article/Category.cshtml
+++ b/16_Shop_MultiProduct/Views/Article/Category.cshtml
@@ -7,6 +7,8 @@
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
     }
     string currentUrl = Request.Url.Scheme + "://" + Request.Url.Authority + Request.ApplicationPath.TrimEnd('/');
+
+    
 }
 @section health{
     <meta name="description" content="@ViewBag.Description" />
@@ -26,11 +28,11 @@
             <li><a href="/blog">blogs</a></li>
             <li><span> @ViewBag.Keywords</span></li>
         </ul>
- 
+
     </div>
 </div>
 <div class="main-container left-sidebar">
-    <div class="container">       
+    <div class="container">
         <div class="row blog-grid content-post auto-clear">
             <div class="main-content col-lg-9 col-md-8">
                 <!-- Main content -->
@@ -52,99 +54,16 @@
                                 <a class="read-more" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">
                                     Xem thêm
                                 </a>
-
                             </div>
                         </article>
                     }
                 </div>
                 @Html.Raw(ViewBag.page)
             </div>
-            <div class="sidebar col-lg-3 col-md-4">
-                <div id="widget-area" class="widget-area blog-sidebar">
-                    <div class="sidebar-head">
-                        <span class="text">Sidebar</span>
-                        <a href="#" class="close-block-sidebar"><i class="fa fa-times" aria-hidden="true"></i></a>
-                    </div>
-            <div id="categories-3" class="widget widget_categories">
-                        <h2 class="widgettitle">Browse Categories<span class="arrow"></span></h2>		<ul>
-                            <li class="cat-item cat-item-82">
-                                <a href="category/appliances/index.html">Appliances</a>
-                            </li>
-                            <li class="cat-item cat-item-83">
-                                <a href="category/digital/index.html">Digital</a>
-                            </li>
-                            <li class="cat-item cat-item-84">
-                                <a href="category/furniture/index.html">Furniture</a>
-                            </li>
-                            <li class="cat-item cat-item-85">
-                                <a href="category/handmade/index.html">Handmade</a>
-                            </li>
-                            <li class="cat-item cat-item-86">
-                                <a href="category/narure/index.html">Narure</a>
-                            </li>
-                            <li class="cat-item cat-item-87">
-                                <a href="category/organic/index.html">Organic</a>
-                            </li>
-                        </ul>
-                    </div><div id="widget_ovic_post-4" class="widget widget-recent-post">
-                        <h2 class="widgettitle">Recent Post<span class="arrow"></span></h2>                <div class="ovic-blog">
-                            <article class="blog-item post-3450 post type-post status-publish format-standard has-post-thumbnail hentry category-digital tag-google tag-phone">
-                                <div class="post-thumb">
-                                    <a href="google-3xl-pixel-phone-is-much-nicer-than-the-iphone-x/index.html" class="">
-                                        <img width="100" height="73" src="https://gokko.kutethemes.net/wp-content/uploads/2018/12/bloga-full-imgs-100x73.jpg" class="wp-post-image attachment-100x73 size-100x73 lazy" alt="bloga-full-imgs" style="display: inline;">
-                                    </a>
-                                </div>
-                                <div class="post-info">
-                                    <h4 class="post-title">
-                                        <a href="google-3xl-pixel-phone-is-much-nicer-than-the-iphone-x/index.html">Google 3xl pixel phone is much nicer than the iphone X</a>
-                                    </h4>
-                                    <div class="post-meta">
-                                        <span class="author"><span>By</span> admin</span> -
-                                        <span class="date">10 Dec 2018</span>
-                                    </div>
-                                </div>
-                            </article>
-                            <article class="blog-item post-3443 post type-post status-publish format-standard has-post-thumbnail hentry category-digital tag-apple">
-                                <div class="post-thumb">
-                                    <a href="top-best-laptops-voted-in-2018/index.html" class="">
-                                        <img width="100" height="73" src="https://gokko.kutethemes.net/wp-content/uploads/2018/12/blog-fuedll-imgs-100x73.jpg" class="wp-post-image attachment-100x73 size-100x73 lazy" alt="blog-fuedll-imgs" style="display: inline;">
-                                    </a>
-                                </div>
-                                <div class="post-info">
-                                    <h4 class="post-title">
-                                        <a href="top-best-laptops-voted-in-2018/index.html">Top best laptops voted in 2018</a>
-                                    </h4>
-                                    <div class="post-meta">
-                                        <span class="author"><span>By</span> admin</span> -
-                                        <span class="date">10 Dec 2018</span>
-                                    </div>
-                                </div>
-                            </article>
-                            <article class="blog-item post-3441 post type-post status-publish format-standard has-post-thumbnail hentry category-digital tag-samsung">
-                                <div class="post-thumb">
-                                    <a href="top-the-best-smart-watches-2018/index.html" class="">
-                                        <img width="100" height="73" src="https://gokko.kutethemes.net/wp-content/uploads/2018/12/blog-full-imgs-100x73.jpg" class="wp-post-image attachment-100x73 size-100x73 lazy" alt="blog-full-imgs" style="display: inline;">
-                                    </a>
-                                </div>
-                                <div class="post-info">
-                                    <h4 class="post-title">
-                                        <a href="top-the-best-smart-watches-2018/index.html">Top the best smart watches 2018</a>
-                                    </h4>
-                                    <div class="post-meta">
-                                        <span class="author"><span>By</span> admin</span> -
-                                        <span class="date">10 Dec 2018</span>
-                                    </div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                
-                </div><!-- .widget-area -->
-
-            </div>
+            @Html.Partial("article/_MenuAndAdsPartial")
         </div>
-    
-       
+
+
     </div>
 </div>
 
